# heidekreis_bt_wahl

./: .gitignore  generate_map.py  netlify.toml  pyproject.toml  test.py
datasets/: strassen_geo.json  strassen_geo.old.json  strassen_to_wahlraum.csv  wahlergebnisse_hk.csv
nominatim/: docker-compose.yml
